syntax = "proto3";

package msgProto;

message SubscribeChannelReq
{
	string Channel = 1;
}

message SubscribeChannelAck
{
	string Channel = 1;
}

message SvcStatusAck
{
    string SvcID = 1;
	int32 UserCount = 2;
}

message ServiceIdentifyAck 
{
	string SvcName = 1;
	string SvcID = 2;
}